<resources>
    <string name="app_name">Basic Framework</string>
    <string name="study">Study</string>
    <string name="food">Food</string>
    <string name="bus">Bus</string>
    <string name="map">Map</string>
    <string name="food_text">Food Text</string>
    <string name="study_text">Study Text</string>
    <string name="back">back</string>
    <string name="bus_routes_here">BUS ROUTES HERE</string>
    <string name="back2">Back</string>
    <string name="map_here">MAP HERE</string>
    <string name="what_can_we_help_you_with_today">What can we help you with today?</string>
    <string name="nuswhere">NUSWhere</string>

</resources>
